-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12, 13, 14, 15
-
Component/s: hotspot
-
b11
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8240801 | 14.0.2 | Christian Hagedorn | P4 | Resolved | Fixed | b01 |
| JDK-8246670 | 13.0.4 | Christian Hagedorn | P4 | Resolved | Fixed | b04 |
| JDK-8239232 | 11.0.8-oracle | Christian Hagedorn | P4 | Resolved | Fixed | b01 |
| JDK-8240480 | 11.0.8 | Christian Hagedorn | P4 | Resolved | Fixed | b01 |
# Internal Error (open/src/hotspot/share/opto/node.hpp:411), pid=18949, tid=19027
# assert(((n) == __null || !VerifyIterativeGVN || !((n)->is_dead()))) failed: can not use dead node
V [libjvm.so+0x3d7ffc] Node::set_req(unsigned int, Node*)+0x26c
V [libjvm.so+0x11fbf99] Node::replace_edge(Node*, Node*)+0x69
V [libjvm.so+0x10430d0] PhaseIdealLoop::try_move_store_after_loop(Node*) [clone .part.120]+0x4f0
V [libjvm.so+0x1047e7b] PhaseIdealLoop::split_if_with_blocks_post(Node*)+0x7ab
V [libjvm.so+0x1048839] PhaseIdealLoop::split_if_with_blocks(VectorSet&, Node_Stack&)+0x1f9
V [libjvm.so+0x103fc7d] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x10fd
V [libjvm.so+0x875d1a] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x2ea
This reproduces with different programs. One example is dacapo:
$ java -XX:+VerifyIterativeGVN -jar dacapo-9.12-bach.jar avrora fop h2 jython luindex lusearch pmd sunflow xalan
- backported by
-
JDK-8239232 C2: assert(((n) == __null || !VerifyIterativeGVN || !((n)->is_dead()))) failed: can not use dead node
-
- Resolved
-
-
JDK-8240480 C2: assert(((n) == __null || !VerifyIterativeGVN || !((n)->is_dead()))) failed: can not use dead node
-
- Resolved
-
-
JDK-8240801 C2: assert(((n) == __null || !VerifyIterativeGVN || !((n)->is_dead()))) failed: can not use dead node
-
- Resolved
-
-
JDK-8246670 C2: assert(((n) == __null || !VerifyIterativeGVN || !((n)->is_dead()))) failed: can not use dead node
-
- Resolved
-
- relates to
-
JDK-8189067 SuperWord optimization crashes with "assert(out == prev || prev == __null) failed: no branches off of store slice"
-
- Closed
-
-
JDK-8246203 Segmentation fault in verification due to stack overflow with -XX:+VerifyIterativeGVN
-
- Resolved
-
-
JDK-8248521 TestVerifyIterativeGVN.java is failing with timeout
-
- Resolved
-